# rustbook

./: .gitignore
chapter1/part2helloworld/: main.rs
chapter1/part3hellocargo/: Cargo.toml
chapter12/: Cargo.toml  Cranky.toml
chapter12/common/: Cargo.toml
chapter12/common/src/: error.rs  lib.rs  not_empty_string.rs  not_whitespace_string.rs  prelude.rs
chapter12/input_validator/: Cargo.toml
chapter12/input_validator/input_validator_derive/: Cargo.toml
chapter12/input_validator/input_validator_derive/src/: from.rs  into_inner.rs  lib.rs  new.rs  utils.rs
chapter12/input_validator/src/: input.rs  into_inner.rs  lib.rs  new.rs
chapter12/minigrep/: Cargo.toml
chapter12/minigrep/src/: error.rs  main.rs  prelude.rs
chapter12/minigreplib/: Cargo.toml
chapter12/minigreplib/src/: error.rs  lib.rs  newtypes.rs  prelude.rs
chapter12/newtypes/: Cargo.toml
chapter12/newtypes/src/: lib.rs  not_whitespace_string.rs
chapter12/not_empty_string/: Cargo.toml
chapter12/not_empty_string/src/: lib.rs
chapter12/tests_common/: Cargo.toml
chapter12/tests_common/src/: implements_behaviors.rs  lib.rs
chapter2guessinggame/: Cargo.toml
chapter2guessinggame/src/: main.rs
chapter3/fibonacci/src/: main.rs
chapter3/part1variables/: Cargo.toml
chapter3/part1variables/src/: main.rs
chapter3/part2datatypes/: Cargo.toml
chapter3/part2datatypes/src/: main.rs
chapter3/part3functions/: Cargo.toml
chapter3/part3functions/src/: main.rs
chapter3/part5controlflow/: Cargo.toml
chapter3/part5controlflow/src/: main.rs
chapter3/temperatureconverter/src/: main.rs
chapter4/chapter4whatisownership/: Cargo.toml
chapter4/chapter4whatisownership/src/: main.rs
chapter4/part2referencesandborrowing/: Cargo.toml
chapter4/part2referencesandborrowing/src/: main.rs
chapter4/part3slices/: Cargo.toml
chapter4/part3slices/src/: main.rs
chapter5/part1structs/: Cargo.toml
chapter5/part1structs/src/: main.rs
chapter5/part2exampleprogram/: Cargo.toml
chapter5/part2exampleprogram/src/: main.rs
chapter6/part1defining/: Cargo.toml
chapter6/part1defining/src/: main.rs
chapter6/part2match/: Cargo.toml
chapter6/part2match/src/: main.rs
chapter6/part3iflet/: Cargo.toml
chapter6/part3iflet/src/: main.rs
chapter7/part2mods/restaurant/src/: front_of_house.rs  lib.rs
chapter7/part2mods/restaurant/src/front_of_house/: hosting.rs
chapter8/part1vectors/: Cargo.toml
chapter8/part1vectors/src/: main.rs
chapter8/part2strings/: Cargo.toml
chapter8/part2strings/src/: main.rs
chapter8/part3departmentdb/: Cargo.toml
chapter8/part3departmentdb/src/: department_db.rs  error.rs  lib.rs  main.rs  prelude.rs
chapter8/part3departmentdb/src/utils/: mod.rs  not_empty_string.rs
chapter8/part3exercises/: Cargo.toml
chapter8/part3exercises/src/: department_db.rs  lib.rs  main.rs  not_empty_string.rs  pig_latin.rs  tests_common.rs  vec_stats.rs
chapter8/part3hashmaps/: Cargo.toml
chapter8/part3hashmaps/src/: main.rs
webserver/: Cargo.toml  Cranky.toml
webserver/input_validator/: Cargo.toml
webserver/input_validator/input_validator_derive/: Cargo.toml
webserver/input_validator/input_validator_derive/src/: from.rs  lib.rs  new.rs  utils.rs
webserver/input_validator/src/: error.rs  lib.rs  new.rs
webserver/input_validator/tests/: derive.rs
webserver/tests_common/: Cargo.toml
webserver/tests_common/src/: implements_behaviors.rs
webserver/webserver/: Cargo.toml
webserver/webserver/src/: lib.rs  main.rs
