[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A collection of common utilities"
authors = ["Cameron Podd <cbpodd@gmail.com>"]
keywords = ["common", "utitlities"]
readme = "None"
repository = "https://github.com/cbpodd/rustbook"
categories = ["learning-tools::example-test-code"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.3"

[dev-dependencies]
tests_common = { path = "../tests_common" }