[package]
name = "minigreplib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library minigrep tool for searching files."
authors = ["Cameron Podd <cbpodd@gmail.com>"]
keywords = ["grep", "filesystem"]
readme = "None"
repository = "https://github.com/cbpodd/rustbook"
categories = ["learning-tools::example-test-code"]

[dependencies]
derive_more = "0.99"
thiserror = "1.0"
derive_builder = "0.9"

input_validator = { path = "../input_validator", features = ["derive"] }