[package]
name = "newtypes"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A collection of commmon newtypes for reuse."
authors = ["Cameron Podd <cbpodd@gmail.com>"]
keywords = ["newtype", "wrapper"]
readme = "None"
repository = "https://github.com/cbpodd/rustbook"
categories = ["learning-tools::example-test-code"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
wrapper = "0.1"

[dev-dependencies]
tests_common = { path = "../tests_common" }
serde_json = "1.0"

[features]
serde = ["dep:serde"]
